--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 EXPO_PUBLIC_COGNITO_USER_POOL_ID=USER_POOL_ID
 EXPO_PUBLIC_COGNITO_CLIENT_ID=CLIENT_ID
+
+EXPO_PUBLIC_API_GATEWAY_URL=API_GATEWAY_URL
