implemented scanner component for qr code handling

--- a/app.json
+++ b/app.json
@@ -41,6 +41,13 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
+      ],
+      [
+        "react-native-vision-camera",
+        {
+          "cameraPermissionText": "hackUMBC needs access to your Camera.",
+          "enableCodeScanner": true
+        }
       ]
     ],
     "experiments": {
