--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "build-android-dev": "eas build --platform android --profile development",
+    "build-ios-dev": "eas build --platform ios --profile development"
   },
   "jest": {
     "preset": "jest-expo"
@@ -40,7 +42,6 @@
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-modal": "^14.0.0-rc.1",
-    "react-native-nfc-manager": "^3.16.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
