config eas builds to pull env from expo

--- a/app.json
+++ b/app.json
@@ -12,7 +12,10 @@
       "supportsTablet": true,
       "infoPlist": {
         "NSCameraUsageDescription": "hackUMBC needs access to your Camera.",
-        "ITSAppUsesNonExemptEncryption": false
+        "ITSAppUsesNonExemptEncryption": false,
+        "NSAppTransportSecurity": {
+          "NSAllowsArbitraryLoads": true
+        }
       },
       "bundleIdentifier": "com.hackumbc.hackumbcmobile"
     },
