--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@aws-amplify/react-native": "^1.1.10",
+    "@aws-amplify/ui-react-native": "^2.5.3",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "amazon-cognito-identity-js": "^6.3.15",
+    "aws-amplify": "^6.15.1",
     "expo": "^53.0.12",
     "expo-blur": "^14.1.5",
     "expo-constants": "^17.1.6",
@@ -39,6 +41,7 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.4",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
@@ -48,6 +51,8 @@
     "react-native-webview": "13.13.5"
   },
   "devDependencies": {
+    "@aws-amplify/backend": "^1.16.1",
+    "@aws-amplify/backend-cli": "^1.8.0",
     "@babel/core": "^7.25.2",
     "@expo/metro-runtime": "~5.0.4",
     "@react-native-community/cli": "^18.0.0",
