--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "react-native-screens": "~4.11.1",
     "react-native-vision-camera": "^4.6.4",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-image": "~2.3.0"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.16.1",
