--- a/app.json
+++ b/app.json
@@ -8,6 +8,12 @@
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "fonts": [
+      {
+        "asset": "./assets/fonts/LilitaOne-Regular.ttf",
+        "family": "LilitaOne"
+      }
+    ],
     "ios": {
       "supportsTablet": true,
       "infoPlist": {
