--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "expo-blur": "^14.1.5",
     "expo-constants": "^17.1.6",
     "expo-dev-client": "^5.2.1",
-    "expo-font": "^13.3.1",
+    "expo-font": "~13.3.2",
     "expo-haptics": "^14.1.4",
-    "expo-linear-gradient": "^14.1.5",
+    "expo-linear-gradient": "~14.1.5",
     "expo-linking": "^7.1.5",
     "expo-router": "^5.1.0",
     "expo-secure-store": "^14.2.3",
