--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-modal": "^14.0.0-rc.1",
+    "react-native-popup-dialog": "^0.18.3",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
